SCRUM-1728: fixed layout issues with my fresher brain

--- a/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/pulse.css
+++ b/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/pulse.css
@@ -18,9 +18,11 @@
 
 .v-dashboard-entry {
 	border-bottom: 1px solid #CCCCCC;
-	padding:10px 0 5px 3px;
 	font-size:15px;
 }
+
+.v-dashboard-entry .v-csslayout-margin-top {padding-top:10px;}
+.v-dashboard-entry .v-csslayout-margin-bottom {padding-bottom:5px;}
 
 .v-dashboard-entry .v-label {
 	display:inline-block;
@@ -30,7 +32,6 @@
 	width:32px;
 	height:32px;
 	color:#679600;
-	margin-right:10px;
 	font-size:32px;
 	position: relative;
     top:-12px;
@@ -38,7 +39,12 @@
 }
 
 .v-dashboard-entry .content {
-	margin-left:40px;
+	margin-left:-40px;
+	float:right;
+}
+
+.v-dashboard-entry .content .v-csslayout-margin-left {
+	padding-left:40px;
 }
 
 .v-dashboard-entry .v-label-comment:empty {
@@ -48,15 +54,13 @@
 	padding:8px;
 	background-color:#e6e6e6;
 	margin-bottom:5px;
-	white-space:normal !important;
 }
 .v-dashboard-entry .comment-divet {
 	color:#E6E6E6;
-    display:inline-block;
+	display:block;
     font-size:20px;
     height:14px;
     line-height:20px;
-    overflow:hidden;
     padding-left:12px;
 }
 
@@ -73,7 +77,6 @@
 }
 
 .v-pulse .category-separator {
-    display:inline-block;
     padding:10px 0;
 }
 
